Update requirements and add torch version for compatibility
- Updated requirements.txt to include torch-scatter for TAPAS functionality.
- Specified setuptools-rust and tokenizers versions for building the tokenizers package.
- Added a new file torch_update.txt with the specific torch version 1.10.2+cu113 for Python 3.6 compatibility.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ tqdm>=4.64.1
 rank-bm25>=0.2.2
 numpy>=1.19.5
 torch<=1.9.1  # Updated for Python 3.6 compatibility
+torch-scatter  # Added for TAPAS functionality
 transformers
 jsonlines
 pandas
 jinja2
 sentence-transformers
 scikit-learn
+setuptools-rust>=1.1.2  # Added to build tokenizers package
+tokenizers>=0.10.3,<0.13  # Pre-built binary if available
